Fix responsiveness issues when viewing on mobile
Added flex wraps to multiple classes as well as removed a surrounding div hero img in order for the website to respond in a better manner to smaller viewports like a phone.

--- a/styles/style.css
+++ b/styles/style.css
@@ -22,6 +22,7 @@ body {
 
 .header {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
     padding: 16px;
@@ -54,7 +55,9 @@ a {
 
 .hero-main {
     display: flex;
+    flex-wrap: wrap-reverse;
     align-items: center;
+    justify-content: space-evenly;
     gap: 36px;
     margin: 200px 15%;
 }
@@ -63,6 +66,7 @@ a {
     display: flex;
     flex-direction: column;
     gap: 24px;
+    width: 450px;
 }
 
 .hero-title {
@@ -92,11 +96,7 @@ p {
 }
 
 #hero-img {
-    display: flex;
-}
-
-#hero-img  img{
-    width: 450px;
+    max-width: 450px;
     height: auto;
 }
 
@@ -118,6 +118,7 @@ p {
 
 .main-content {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     gap: 36px;
@@ -175,6 +176,7 @@ p {
 
 .call-to-action-content {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     background-color: #3882F6;
